Mobile responsiveness for 768 - 1023 is mostly done. Still need to make text more readable and fix nav.

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -28,13 +28,56 @@
 		/*letter-spacing: 1px;*/
 	}
 
+	.btn {
+		/* There's gotta be a much better way to do this:; */
+		margin-left: 70px;
+	}
+
 }
 
 /* Tablets (768px to 1023px) */
 @media only screen and (max-width: 1023px) {
+	
+	h1 { font-size: 200%; }
+
+	h2 { font-size: 100%; }
+
 	.mobile-nav-icon {
 		/*display: inline-block;*/
 		margin-left: 10px;
+	}
+
+	.banner {
+		width: 90%;
+		margin-top: 30px;
+	}
+
+	.description {
+		width: 90%;
+	}
+
+	.description-col {
+		/*display: inline-block;*/
+		/*height: 175px;*/
+		margin: 0 1px;
+		/*padding: 15px;*/
+	}
+
+	.intro {
+		/*line-height: 150%;*/
+		/*text-align: justify;*/
+		font-size: 80%;
+		/*letter-spacing: 1px;*/
+	}
+
+	.btn {
+		/* There's gotta be a much better way to do this:; */
+		margin-left: 30px;
+	}
+
+	.open-logo {
+		height: 15px;
+		margin-bottom: -5px;
 	}
 
 	/*.nav-right li {*/
